--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.facebook.android:facebook-login:[4,5)'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
 }
