--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[4,5)'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
+    implementation 'com.android.support:cardview-v7:28.0.+'
+    implementation 'com.android.support:recyclerview-v7:28.0.+'
 }
